--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,8 @@
-<h1>Welcome to Examportal</h1>
-<button mat-raised-button color="primary">Homepage</button>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 text-center">
+            <h1>Welcome to Examportal</h1>
+            <button mat-raised-button color="accent">Homepage</button>
+        </div>
+    </div>
+</div>
